# LLTap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
examples/: .gitignore  clean.sh  example.c  example_hook.c  functionpointers.c  functionpointers_hooks.c  hello.c  hello_hook.c  locktree.c  locktree_test1.c  malloc_fault.c  malloc_fault_hooks.c  rsa_gmp.c  rsa_gmp.h  rsa_gmp_fault_hooks.c  run.sh  test_varargs.c  test_varargs_hook.c
include/: liblltap.h
lib/: CMakeLists.txt  hookmanager.cpp
llvmpass/: .ycm_extra_conf.py  CMakeLists.txt  LICENSE-NCSA  LLTap.cpp
tracergen/: genlibtracer.py  lltaptracergen
tracergen/tracergen/: cli.py  templates.py  withclang.py
tracers/: cstd_headers.txt  generate.sh  openssl_headers.txt  posix_headers.txt
